--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "illuminate/html": "^5.0",
         "laravelcollective/html": "~5.0",
-        "caouecs/laravel-lang": "~3.0"
+        "caouecs/laravel-lang": "~3.0",
+        "fzaninotto/faker": "~1.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
