--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "Sabixao\\": "app/"
         }
     },
     "autoload-dev": {
